<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/itemLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/recyclerItemNameTextView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_name_header"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/increaseButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/increase_QTY"
            android:minWidth="48dp"
            android:src="@drawable/ic_baseline_arrow_upward_24" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_qty_header"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/decreaseButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/decrease_qty"
            android:minWidth="48dp"
            android:src="@drawable/ic_baseline_arrow_downward_24" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/edit"
            android:minWidth="48dp"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_edit_24" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/delete"
            android:minWidth="48dp"
            android:src="@drawable/ic_baseline_delete_24" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fab_description"
        android:onClick="fabOnClickListener"
        app:backgroundTint="@color/design_default_color_primary"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/design_default_color_background" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inventoryRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemLinearLayout"
        android:clipToPadding="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>