<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"

        android:gravity="center"

        android:text="@string/item_addition"
        android:textColor="@color/design_default_color_primary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="248dp"
        android:layout_height="48dp"

        android:layout_marginTop="60dp"
        android:hint="@string/add_item_hint"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:padding="5dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <LinearLayout
        android:id="@+id/linearLayoutItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintTop_toBottomOf="@+id/itemNameEditText"
        tools:layout_editor_absoluteX="-50dp">

        <ImageButton
            android:id="@+id/itemQtyIncreaseButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"

            android:contentDescription="@string/increase_QTY"
            android:minWidth="48dp"
            android:onClick="increaseButtonOnClick"
            android:src="@drawable/ic_baseline_arrow_upward_24"
            app:tint="@android:color/holo_green_dark" />


        <EditText
            android:id="@+id/qtyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"

            android:hint="@string/item_qty_header"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/itemQtyDecreaseButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/decrease_qty"
            android:maxWidth="48dp"
            android:onClick="decreaseButtonOnClick"
            android:src="@drawable/ic_baseline_arrow_downward_24"
            app:tint="@color/design_default_color_error" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutItemQuantity">

        <Button
            android:id="@+id/SaveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="125dp"

            android:layout_height="wrap_content"
            android:onClick="saveButtonOnClick"
            android:text="@string/save_button"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:onClick="cancelButtonOnClick"
            android:text="@string/cancel_button"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
