<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/application_name"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_storefront_24"
        app:tint="@color/design_default_color_primary" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/usernameEditText"
                android:text="@string/login_username"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/design_default_color_on_secondary"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/passwordEditText"
                android:text="@string/login_password"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="115dp"
                tools:layout_editor_absoluteY="275dp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/design_default_color_on_secondary"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="125dp"

                android:layout_height="wrap_content"
                android:onClick="registerOnClick"
                android:text="@string/register_button"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/loginButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:onClick="loginOnClick"
                android:text="@string/login_button"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>